# Spring2022-CEG2350

./: .gitignore  AWSAcademy.md  AWSTroubleshooting.md  EnvironmentSetup.md  Ideas.md  LabOutlines.md  README.md  networking-notes.md
Exams/: Quiz3-review.md  Quiz6-review.md  data  emails.txt  final-key.md  finalreview.md  iftest  midterm-key.md  midtermreview.md
Labs/: Lab06.md
Labs/Content-Reorg/: clean-commands  networking.md
Labs/Content-Reorg/Lab02/: README.md
Labs/Content-Reorg/Lab03/: LabTemplate.md
Labs/Content-Reorg/Lab04/: README.md
Labs/Content-Reorg/Lab06/: LabTemplate.md  README.md
Labs/Content-Reorg/Lab07/: LabTemplate.md  README.md
Labs/Content-Reorg/Lab08/: README.md
Labs/Lab-01/: README.md
Labs/Lab01/: LabTemplate.md  README.md
Labs/Lab02/: LabTemplate.md  README.md
Labs/Lab03/: README.md
Labs/Lab04/: LabTemplate.md  README.md  grepdata.txt  registered-users.txt  sedfile.html
Labs/Lab05/: LabTemplate.md  README.md  cfargs.sh
Labs/Lab06/: Images.md  Lab06.md  README.md  demo.md
Labs/Lab07/: Lab07.md  README.md  original.txt
Labs/Lab08/: LabTemplate.md  README.md  infinity.sh
Labs/Lab09/: README.md
Labs/Lab10/: LabTemplate.md  README.md
Labs/Lab11/: LabTemplate.md  README.md
code-demos/: Makefile  Makefile-Java  a.out  area  area.c  buggy.cpp  heap_use.c  hello  pointers  pointers.c
code-demos/big-C/: CMakeLists.txt  Makefile  header.h  main.c  morecode.c
code-demos/big-Java/: Main.java  funClass.java
processes/: fork.c  orphan  orphan.c  pids.c  zombie  zombie.c
regex/: emails.txt
(+3 files in other folders)
